# chinesenumber

./: .gitignore  README.md  pyproject.toml
chinesenumber/: __init__.py
dev/: cleaner.py
tests/: test_parse.py
