[tool.poetry]
name = "chinesenumber"
version = "0.1.1"
description = "Convert Chinese (or Japanese) numbers to numeric digits (21)"
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/patarapolw/chinesenumber"
homepage = "https://github.com/patarapolw/chinesenumber"

[tool.poetry.dependencies]
python = ">=3"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pytest-readme = "^1.0"
